--- a/app/src/main/res/layout/activity_inventario_finalizar.xml
+++ b/app/src/main/res/layout/activity_inventario_finalizar.xml
@@ -2,8 +2,10 @@
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".InventarioFinalizar">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -26,7 +28,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#00FFFFFF"
-                android:src="@drawable/ic_back"></ImageButton>
+                android:src="@drawable/ic_back">
+
+            </ImageButton>
 
 
             <ImageView
@@ -34,19 +38,24 @@
                 android:layout_width="82dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="116dp"
-                android:src="@drawable/mercedesbenz" />
+                android:src="@drawable/boxicon" />
+
+            <Button
+                android:id="@+id/btn_inv_confirmar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="25dp"
+                android:background="@drawable/rounded_corners"
+                android:backgroundTint="@color/verde_bamx"
+                android:fontFamily="@font/omnes_semibold"
+                android:paddingLeft="20dp"
+                android:paddingRight="20dp"
+                android:text="@string/Finalizar"
+                android:textSize="18sp" />
+
+
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="136dp"
-            android:text="Inventario"
-            android:textSize="24sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.drawerlayout.widget.DrawerLayout>
