--- a/app/src/main/res/layout/activity_entregas.xml
+++ b/app/src/main/res/layout/activity_entregas.xml
@@ -25,7 +25,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageButton
-                android:id="@+id/btn_back_inventarioLay"
+                android:id="@+id/btn_back_inventario"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#00FFFFFF"
@@ -37,17 +37,17 @@
                 android:layout_width="82dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="116dp"
-                android:src="@drawable/silverado" />
+                android:src="@drawable/mercedesbenz" />
         </LinearLayout>
 
         <ImageView
             android:id="@+id/img_troca"
-            android:layout_width="272dp"
-            android:layout_height="123dp"
+            android:layout_width="361dp"
+            android:layout_height="161dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:src="@drawable/silverado"
+            android:src="@drawable/mercedesbenz"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/LinearLayout" />
@@ -56,7 +56,7 @@
             android:id="@+id/tv_static_modelo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="36dp"
+            android:layout_marginTop="24dp"
             android:fontFamily="@font/omnes_semibold"
             android:text="@string/Modelo_Static"
             android:textColor="#FFFFFF"
