--- a/app/src/main/res/layout/activity_inventario_entregas2.xml
+++ b/app/src/main/res/layout/activity_inventario_entregas2.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Inventario2">
+    tools:context=".InventarioEntregas2">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -39,7 +38,7 @@
                 android:layout_width="82dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="116dp"
-                android:src="@drawable/boxicon" />
+                android:src="@drawable/mercedesbenz" />
 
         </LinearLayout>
 
@@ -64,15 +63,6 @@
                 android:text="Aurrera Plan de Ayala"
                 android:textColor="#FFFFFF"
                 android:textSize="28sp" />
-
-            <TextView
-                android:id="@+id/tv_inv_producto"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/omnes_medium"
-                android:text="@string/Producto"
-                android:textColor="#FFFFFF"
-                android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/tv_inv_dir"
