--- a/app/src/main/res/layout/almacen_layout.xml
+++ b/app/src/main/res/layout/almacen_layout.xml
@@ -21,7 +21,7 @@
             android:padding="5dp">
 
             <ImageView
-                android:id="@+id/img_SocioLay"
+                android:id="@+id/img_AlmacenLay"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 tools:srcCompat="@tools:sample/avatars" />
@@ -33,7 +33,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/txt_NombreSocio"
+                android:id="@+id/tv_NombreAlmacen"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/omnes_bold"
@@ -42,16 +42,7 @@
                 android:textSize="21sp" />
 
             <TextView
-                android:id="@+id/txt_DeterSocio"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/omnes_semibold"
-                android:text="TextView"
-                android:textColor="#FFFFFF"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/txt_DirSocio"
+                android:id="@+id/tv_DirAlmacen"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/omnes_medium"
