--- a/app/src/main/res/layout/activity_inventario_entregas.xml
+++ b/app/src/main/res/layout/activity_inventario_entregas.xml
@@ -30,7 +30,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageButton
-                android:id="@+id/btn_back_inventario"
+                android:id="@+id/btn_back_maps"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="#00FFFFFF"
